--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,9 @@ include 'tegral-catalog',
         'tegral-logging',
         'tegral-openapi:tegral-openapi-cli',
         'tegral-openapi:tegral-openapi-dsl',
+        'tegral-openapi:tegral-openapi-feature',
         'tegral-openapi:tegral-openapi-ktor',
+        'tegral-openapi:tegral-openapi-ktorui',
         'tegral-openapi:tegral-openapi-scriptdef',
         'tegral-openapi:tegral-openapi-scripthost',
         'tegral-services:tegral-services-api',
