--- a/examples/simple-json-api/build.gradle
+++ b/examples/simple-json-api/build.gradle
@@ -4,7 +4,9 @@ plugins {
 }
 
 dependencies {
+    implementation project(":tegral-core")
     implementation project(":tegral-web:tegral-web-appdsl")
+    implementation project(":tegral-openapi:tegral-openapi-feature")
 
     testImplementation project(":tegral-di:tegral-di-test")
     testImplementation project(":tegral-di:tegral-di-test-mockk")
