Fix check issues

--- a/tegral-core/build.gradle
+++ b/tegral-core/build.gradle
@@ -20,3 +20,4 @@ sourceSets {
 
 compileKotlin.dependsOn generateKotlin
 checkLicenseMain.dependsOn generateKotlin
+dokkaHtmlPartial.dependsOn generateKotlin
