--- a/code-coverage/build.gradle
+++ b/code-coverage/build.gradle
@@ -17,12 +17,12 @@ dependencies {
     jacocoAggregation project(':tegral-di:tegral-di-test-mockk')
     jacocoAggregation project(':tegral-featureful')
     jacocoAggregation project(':tegral-logging')
-    jacocoAggregatino project(':tegral-openapi:tegral-openapi-dsl')
-    jacocoAggregatino project(':tegral-openapi:tegral-openapi-feature')
-    jacocoAggregatino project(':tegral-openapi:tegral-openapi-ktor')
-    jacocoAggregatino project(':tegral-openapi:tegral-openapi-ktorui')
-    jacocoAggregatino project(':tegral-openapi:tegral-openapi-scriptdef')
-    jacocoAggregatino project(':tegral-openapi:tegral-openapi-scripthost')
+    jacocoAggregation project(':tegral-openapi:tegral-openapi-dsl')
+    jacocoAggregation project(':tegral-openapi:tegral-openapi-feature')
+    jacocoAggregation project(':tegral-openapi:tegral-openapi-ktor')
+    jacocoAggregation project(':tegral-openapi:tegral-openapi-ktorui')
+    jacocoAggregation project(':tegral-openapi:tegral-openapi-scriptdef')
+    jacocoAggregation project(':tegral-openapi:tegral-openapi-scripthost')
     jacocoAggregation project(':tegral-services:tegral-services-api')
     jacocoAggregation project(':tegral-services:tegral-services-feature')
     jacocoAggregation project(':tegral-web:tegral-web-appdefaults')
