Improve coverage in Tegral OpenAPI

--- a/tegral-openapi/tegral-openapi-scripthost/build.gradle
+++ b/tegral-openapi/tegral-openapi-scripthost/build.gradle
@@ -7,6 +7,9 @@ dependencies {
     api libs.kotlin.scripting.common
     api libs.kotlin.scripting.jvm
     api libs.kotlin.scripting.jvmHost
+
+    testImplementation libs.jimfs
+    testImplementation libs.kotlin.coroutines
 }
 
 ext.humanName = "Tegral OpenAPI Script (host)"
