Add Tegral OpenAPI Swagger and CLI tests

--- a/tegral-openapi/tegral-openapi-cli/build.gradle
+++ b/tegral-openapi/tegral-openapi-cli/build.gradle
@@ -8,6 +8,8 @@ dependencies {
     implementation libs.clikt
     implementation libs.kotlin.coroutines
     implementation libs.logback
+
+    testImplementation libs.jimfs
 }
 
 application {
