--- a/tegral-openapi/tegral-openapi-ktorui/build.gradle
+++ b/tegral-openapi/tegral-openapi-ktorui/build.gradle
@@ -5,6 +5,8 @@ plugins {
 dependencies {
     implementation libs.swaggerUi
     implementation libs.ktor.server.core
+
+    testImplementation libs.ktor.server.test
 }
 
 ext.humanName = "Tegral OpenAPI Ktor UI"
