--- a/tegral-logging/build.gradle
+++ b/tegral-logging/build.gradle
@@ -16,4 +16,4 @@ dependencies {
 
 ext.humanName = "Tegral Logging"
 ext.description = "Logging feature for Tegral apps that makes it easy to create and manage loggers."
-ext.url = "https://tegral.zoroark.guru/docs/core/logging/"
+ext.url = "https://tegral.zoroark.guru/docs/modules/core/logging/"
