--- a/tegral-web/tegral-web-config/build.gradle
+++ b/tegral-web/tegral-web-config/build.gradle
@@ -8,4 +8,4 @@ dependencies {
 
 ext.humanName = "Tegral Web Config"
 ext.description = "Provides the necessary configuration sections for Tegral Web apps."
-ext.url = "https://tegral.zoroark.guru/docs/web/config"
+ext.url = "https://tegral.zoroark.guru/docs/modules/web/config"
