--- a/tegral-core/build.gradle
+++ b/tegral-core/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 ext.humanName = "Tegral Core"
 ext.description = "Contains a few common Tegral classes, annotations and interfaces required by all other Tegral modules"
-ext.url = "https://tegral.zoroark.guru/docs/core"
+ext.url = "https://tegral.zoroark.guru/docs/modules/core"
 
 task generateKotlin(type: Copy) {
     def templateContext = [version: project.version]
