--- a/tegral-web/tegral-web-appdsl/build.gradle
+++ b/tegral-web/tegral-web-appdsl/build.gradle
@@ -20,4 +20,4 @@ dependencies {
 
 ext.humanName = "Tegral Web AppDSL"
 ext.description = "Contains common classes for writing Tegral features that will get integrated in main applications."
-ext.url = "https://tegral.zoroark.guru/docs/web/appdsl"
+ext.url = "https://tegral.zoroark.guru/docs/modules/web/appdsl"
