--- a/tegral-web/tegral-web-greeter/build.gradle
+++ b/tegral-web/tegral-web-greeter/build.gradle
@@ -9,4 +9,4 @@ dependencies {
 
 ext.humanName = "Tegral Web Greeter"
 ext.description = "A simple feature that displays a message on startup."
-ext.url = "https://tegral.zoroark.guru/docs/web/greeter"
+ext.url = "https://tegral.zoroark.guru/docs/modules/web/greeter"
