--- a/docs/package.json
+++ b/docs/package.json
@@ -24,6 +24,7 @@
     "mdx-mermaid": "^1.2.3",
     "mermaid": "9.1",
     "prism-react-renderer": "^1.3.1",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.6.4",
