--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,7 @@ include 'tegral-catalog',
         'tegral-openapi:tegral-openapi-dsl',
         'tegral-openapi:tegral-openapi-feature',
         'tegral-openapi:tegral-openapi-ktor',
+        'tegral-openapi:tegral-openapi-ktor-resources',
         'tegral-openapi:tegral-openapi-ktorui',
         'tegral-openapi:tegral-openapi-scriptdef',
         'tegral-openapi:tegral-openapi-scripthost',
