Add tests for tegral-openapi-ktor-resources

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -9,6 +9,7 @@ repositories {
 dependencies {
     def pluginsDef = [
         libs.plugins.kotlin,
+        libs.plugins.kotlinSerialization,
         libs.plugins.dokka,
         libs.plugins.detekt,
         libs.plugins.versions,
