Add test for wrong java version for published artifacts

--- a/settings.gradle
+++ b/settings.gradle
@@ -23,7 +23,9 @@ include 'tegral-catalog',
         'tegral-web:tegral-web-config',
         'tegral-web:tegral-web-controllers',
         'tegral-web:tegral-web-controllers-test',
-        'tegral-web:tegral-web-greeter'
+        'tegral-web:tegral-web-greeter',
+        'e2e-tests:run-with-java-11',
+        'e2e-tests:run-with-java-17'
 
 include 'examples:simple-json-api'
 
