--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,6 +62,28 @@ jobs:
       - name: Run check on example
         run: ./gradlew -p "examples/tutorial/${{ matrix.example }}" check --include-build ../../..
 
+  e2e-tests:
+      name: "Check end-to-end tests"
+      runs-on: ubuntu-latest
+      needs: [validate-wrapper]
+      strategy:
+        matrix:
+          test: ["run-with-java-11", "run-with-java-17"]
+      steps:
+        - uses: actions/checkout@v3
+
+        - uses: actions/setup-java@v3
+          with:
+            distribution: "temurin"
+            # Explicitly not LTS because some tests do some trickery around checking LTS compat
+            java-version: "18"
+
+        - name: Setup Gradle
+          uses: gradle/gradle-build-action@v2
+
+        - name: Run check on e2e test
+          run: ./gradlew -p "e2e-tests/${{ matrix.test }}" check
+
   build-dokka:
     name: "Generate Dokka files"
     runs-on: ubuntu-latest
@@ -110,7 +132,7 @@ jobs:
 
   build-deploy-website:
     name: Assemble and deploy website
-    needs: [validate-wrapper, build-docs, build-dokka, check, check-examples]
+    needs: [validate-wrapper, build-docs, build-dokka, check, check-examples, e2e-tests]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -157,7 +179,7 @@ jobs:
     name: Publish snapshot
     if: "github.event_name == 'push' && !startsWith(github.ref, 'refs/tags/')"
     runs-on: ubuntu-latest
-    needs: [validate-wrapper, check, check-examples]
+    needs: [validate-wrapper, check, check-examples, e2e-tests]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
