Use Java 11 toolchain when building

--- a/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-common-conventions.gradle
@@ -38,3 +38,9 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
         jvmTarget = "11"
     }
 }
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(11)
+    }
+}
