Deprecate scope.factory() Fixes #51

--- a/tegral-core/build.gradle
+++ b/tegral-core/build.gradle
@@ -21,3 +21,4 @@ sourceSets {
 compileKotlin.dependsOn generateKotlin
 checkLicenseMain.dependsOn generateKotlin
 dokkaHtmlPartial.dependsOn generateKotlin
+sourcesJar.dependsOn generateKotlin
