--- a/docs/package.json
+++ b/docs/package.json
@@ -19,8 +19,8 @@
     "@docusaurus/core": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
     "@mdx-js/react": "^1.6.22",
+    "ackee-tracker": "^5.1.0",
     "clsx": "^1.1.1",
-    "docusaurus-plugin-ackee": "^0.0.0",
     "mdx-mermaid": "^1.2.3",
     "mermaid": "9.1",
     "prism-react-renderer": "^1.3.1",
