init new module resolver

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ include 'tegral-catalog',
         'tegral-di:tegral-di-services',
         'tegral-di:tegral-di-test',
         'tegral-di:tegral-di-test-mockk',
+        'tegral-experiments:tegral-openapi-resolver',
         'tegral-featureful',
         'tegral-logging',
         'tegral-openapi:tegral-openapi-cli',
