--- a/docs/package.json
+++ b/docs/package.json
@@ -15,24 +15,25 @@
     "preinstall": "npx -y only-allow pnpm"
   },
   "dependencies": {
-    "@algolia/client-search": "^4.13.1",
-    "@docusaurus/core": "2.1.0",
-    "@docusaurus/preset-classic": "2.1.0",
+    "@algolia/client-search": "^4.14.3",
+    "@docusaurus/core": "2.2.0",
+    "@docusaurus/preset-classic": "2.2.0",
+    "@docusaurus/theme-mermaid": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
     "ackee-tracker": "^5.1.0",
-    "clsx": "^1.1.1",
-    "mdx-mermaid": "^1.2.3",
-    "mermaid": "~9.1.3",
-    "prism-react-renderer": "^1.3.3",
+    "clsx": "^1.2.1",
+    "mdx-mermaid": "^1.3.2",
+    "mermaid": "~9.1.7",
+    "prism-react-renderer": "^1.3.5",
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.6.4",
+    "typescript": "^4.9.4",
     "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.1.0",
-    "@types/react": "^18.0.9"
+    "@docusaurus/module-type-aliases": "2.2.0",
+    "@types/react": "^18.0.26"
   },
   "browserslist": {
     "production": [
