--- a/settings.gradle
+++ b/settings.gradle
@@ -33,3 +33,19 @@ include 'examples:simple-json-api'
 include 'code-coverage'
 include 'docs'
 include 'website'
+
+cacheUrl = System.getenv('BUILD_CACHE_URL')
+cacheUsername = System.getenv('BUILD_CACHE_USERNAME')
+cachePassword = System.getenv('BUILD_CACHE_PASSWORD')
+
+if (cacheUrl != null && cacheUsernme != null && cachePassword != null) {
+    buildCache {
+        remote(HttpBuildCache) {
+            url = cacheUrl
+            credentials {
+                username = cacheUsername
+                password = cachePassword
+            }
+        }
+    }
+}
