--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -117,6 +117,9 @@ jobs:
           distribution: "temurin"
           java-version: "11"
 
+      - name: Install PNPM
+        run: npm i -g pnpm
+
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
