ci: add tos agreement

--- a/ci/build-cache.init.gradle
+++ b/ci/build-cache.init.gradle
@@ -14,4 +14,11 @@ gradle.settingsEvaluated { settings ->
             push = isCi
         }
     }
+
+    settings.gradleEnterprise {
+        buildScan {
+            termsOfServiceUrl = "https://gradle.com/terms-of-service"
+            termsOfServiceAgree = "yes"
+        }
+    }
 }
