--- a/ci/build-cache.init.gradle
+++ b/ci/build-cache.init.gradle
@@ -4,6 +4,12 @@ def cachePassword = System.getenv('BUILD_CACHE_PASSWORD')
 def isCi = System.getenv().containsKey('CI')
 
 gradle.settingsEvaluated { settings ->
+    settings.plugins {
+        plugins {
+            id "com.gradle.enterprise" version "3.12.2"
+        }
+    }
+
     settings.buildCache {
         remote(HttpBuildCache) {
             url = cacheUrl
