--- a/settings.gradle
+++ b/settings.gradle
@@ -33,3 +33,14 @@ include 'examples:simple-json-api'
 include 'code-coverage'
 include 'docs'
 include 'website'
+
+plugins {
+    id "com.gradle.enterprise" version "3.12.2"
+}
+
+gradleEnterprise {
+    buildScan {
+        termsOfServiceUrl = "https://gradle.com/terms-of-service"
+        termsOfServiceAgree = "yes"
+    }
+}
