docs: imma become insane pls fix

--- a/docs/.npmrc
+++ b/docs/.npmrc
@@ -1,2 +1,4 @@
 # Using hard-links is very buggy w/ Gradle caching, so disable that.
 node-linker=hoisted
+symlink=false
+package-import-method=copy
