--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -91,12 +91,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7
       - uses: actions/setup-node@v3
         with:
           cache: 'pnpm'
-
-      - name: Install PNPM
-        run: npm i -g pnpm
+      - name: Install PNPM & dependencies
+        run: |
+          cd docs && pnpm i --frozen-lockfile
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
