--- a/code-coverage/build.gradle
+++ b/code-coverage/build.gradle
@@ -8,35 +8,34 @@ repositories {
 }
 
 def projects = [
-    'tegral-catalog',
-    'tegral-config:tegral-config-core',
-    'tegral-core',
-    'tegral-di:tegral-di-core',
-    'tegral-di:tegral-di-services',
-    'tegral-di:tegral-di-test',
-    'tegral-di:tegral-di-test-mockk',
-    'tegral-featureful',
-    'tegral-logging',
-    'tegral-openapi:tegral-openapi-cli',
-    'tegral-openapi:tegral-openapi-dsl',
-    'tegral-openapi:tegral-openapi-feature',
-    'tegral-openapi:tegral-openapi-ktor',
-    'tegral-openapi:tegral-openapi-ktor-resources',
-    'tegral-openapi:tegral-openapi-ktorui',
-    'tegral-openapi:tegral-openapi-scriptdef',
-    'tegral-openapi:tegral-openapi-scripthost',
-    'tegral-services:tegral-services-api',
-    'tegral-services:tegral-services-feature',
-    'tegral-web:tegral-web-appdefaults',
-    'tegral-web:tegral-web-appdsl',
-    'tegral-web:tegral-web-apptest',
-    'tegral-web:tegral-web-config',
-    'tegral-web:tegral-web-controllers',
-    'tegral-web:tegral-web-controllers-test',
-    'tegral-web:tegral-web-greeter',
-    'e2e-tests:run-with-java-11',
-    'e2e-tests:run-with-java-17',
-    'e2e-tests:run-without-config'
+    ':tegral-config:tegral-config-core',
+    ':tegral-core',
+    ':tegral-di:tegral-di-core',
+    ':tegral-di:tegral-di-services',
+    ':tegral-di:tegral-di-test',
+    ':tegral-di:tegral-di-test-mockk',
+    ':tegral-featureful',
+    ':tegral-logging',
+    ':tegral-openapi:tegral-openapi-cli',
+    ':tegral-openapi:tegral-openapi-dsl',
+    ':tegral-openapi:tegral-openapi-feature',
+    ':tegral-openapi:tegral-openapi-ktor',
+    ':tegral-openapi:tegral-openapi-ktor-resources',
+    ':tegral-openapi:tegral-openapi-ktorui',
+    ':tegral-openapi:tegral-openapi-scriptdef',
+    ':tegral-openapi:tegral-openapi-scripthost',
+    ':tegral-services:tegral-services-api',
+    ':tegral-services:tegral-services-feature',
+    ':tegral-web:tegral-web-appdefaults',
+    ':tegral-web:tegral-web-appdsl',
+    ':tegral-web:tegral-web-apptest',
+    ':tegral-web:tegral-web-config',
+    ':tegral-web:tegral-web-controllers',
+    ':tegral-web:tegral-web-controllers-test',
+    ':tegral-web:tegral-web-greeter',
+    ':e2e-tests:run-with-java-11',
+    ':e2e-tests:run-with-java-17',
+    ':e2e-tests:run-without-config'
 ]
 
 dependencies {
