--- a/tegral-openapi/tegral-openapi-scripthost/build.gradle
+++ b/tegral-openapi/tegral-openapi-scripthost/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 dependencies {
+    api project(":tegral-openapi:tegral-openapi-dsl")
     api project(":tegral-openapi:tegral-openapi-scriptdef")
     api libs.kotlin.scripting.common
     api libs.kotlin.scripting.jvm
